force-app/main/default/objects/Sales_Comp_Category_Mapping_Load__c/Sales_Comp_Category_Mapping_Load__c.object-meta.xml
<CustomObject>
    <description>SOX object - Arroyo 2.0 Project : Temporary Custom Object to data load custom metadata record for Sales_Comp_Category_Mapping__mdt</description>
    <label>Sales Comp Category Mapping Load</label>
    <nameField>
        <label>Sales Comp Category Mapping Load Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Sales Comp Category Mapping Loads</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>