force-app/main/default/objects/Sales_Comp_Category_Mapping_Load__c/fields/Mapped_Sales_Comp_Category__c.field-meta.xml
<CustomField>
    <fullName>Mapped_Sales_Comp_Category__c</fullName>
    <label>Mapped Sales Comp Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>APPFLOWS</fullName>
            </value>
            <value>
                <fullName>BUSINESS EDITION SCALE</fullName>
            </value>
            <value>
                <fullName>CDP ADD-ON</fullName>
            </value>
            <value>
                <fullName>CDP SCALE</fullName>
            </value>
            <value>
                <fullName>CEM</fullName>
            </value>
            <value>
                <fullName>CLOUD EDITION</fullName>
            </value>
            <value>
                <fullName>CLOUD NATIVE</fullName>
            </value>
            <value>
                <fullName>CLOUD ON ADD-ON</fullName>
            </value>
            <value>
                <fullName>CLOUD OUT</fullName>
            </value>
            <value>
                <fullName>CLOUD VAULT</fullName>
            </value>
            <value>
                <fullName>CONFERENCE</fullName>
            </value>
            <value>
                <fullName>CONSUMPTION</fullName>
            </value>
            <value>
                <fullName>CONSUMPTION ACTUALS</fullName>
            </value>
            <value>
                <fullName>CONSUMPTION OVERAGES</fullName>
            </value>
            <value>
                <fullName>ENTERPRISE EDITION SCALE</fullName>
            </value>
            <value>
                <fullName>EVALUATION UNITS</fullName>
            </value>
            <value>
                <fullName>HARDWARE</fullName>
            </value>
            <value>
                <fullName>HW SUPPORT</fullName>
            </value>
            <value>
                <fullName>HYBRID CLOUD</fullName>
            </value>
            <value>
                <fullName>IGNEOUS</fullName>
            </value>
            <value>
                <fullName>INACTIVE</fullName>
            </value>
            <value>
                <fullName>INSTALL</fullName>
            </value>
            <value>
                <fullName>MAILBOX</fullName>
            </value>
            <value>
                <fullName>MISC</fullName>
            </value>
            <value>
                <fullName>NAS CLOUD</fullName>
            </value>
            <value>
                <fullName>NAS DIRECT ARCHIVE</fullName>
            </value>
            <value>
                <fullName>NAS DIRECT ARCHIVE SCALE</fullName>
            </value>
            <value>
                <fullName>NFR</fullName>
            </value>
            <value>
                <fullName>O365</fullName>
            </value>
            <value>
                <fullName>PROFESSIONAL SERVICES - PAY ON DELIVERY</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>